--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.5",
     "typed.js": "^2.0.12",
     "web-vitals": "^2.1.2"
   },
